src/objects/VIDSignerIntegracion__mdt.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizacion__c</fullName>
        <label>Autorizacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>ContentType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metodo__c</fullName>
        <label>Metodo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PuntoAcceso__c</fullName>
        <label>PuntoAcceso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VIDSignerIntegracion</label>
    <pluralLabel>VIDSignerIntegraciones</pluralLabel>
</CustomObject>